log
Sun 21 Aug 2022 04:48:05 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   list->size = 0;
      |       ^~
Compilation failed
28e288b
Sun 21 Aug 2022 04:48:21 PM UTC: 
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   list->size = 0;
      |       ^~
Compilation failed
e38a19b
Sun 21 Aug 2022 04:49:06 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   list->size = NULL;
      |       ^~
Compilation failed
9dcdee6
Sun 21 Aug 2022 04:49:16 PM UTC: 
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   list->size = NULL;
      |       ^~
Compilation failed
f7af417
Sun 21 Aug 2022 04:49:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4485440
Sun 21 Aug 2022 05:02:49 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:38: error: expected ‘;’ before ‘:’ token
   44 |   list->current = list->current->next:
      |                                      ^
      |                                      ;
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c4ed3c5
Sun 21 Aug 2022 05:03:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ba0aee0
Sun 21 Aug 2022 05:31:44 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
296a0cb
Sun 21 Aug 2022 05:41:07 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:61:14: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   61 |   return list->data;
      |              ^~
list.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a50ee73
Sun 21 Aug 2022 05:41:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
039332a
Sun 21 Aug 2022 05:51:22 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:65:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   65 |   if(list->current == NULL)
      |   ^~
list.c:69:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   69 |     return NULL;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
16c1992
Sun 21 Aug 2022 05:59:35 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:70:1: error: control reaches end of non-void function [-Werror=return-type]
   70 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1243167
Sun 21 Aug 2022 06:00:55 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:69:24: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   69 |   list->current =  list->prev;
      |                        ^~
list.c:70:29: error: expected ‘;’ before ‘}’ token
   70 |   return list->current->data
      |                             ^
      |                             ;
   71 | 
   72 | }
      | ~                            
Compilation failed
abb87d9
Sun 21 Aug 2022 06:01:48 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:70:29: error: expected ‘;’ before ‘}’ token
   70 |   return list->current->data
      |                             ^
      |                             ;
   71 | }
      | ~                            
Compilation failed
a692f0d
Sun 21 Aug 2022 06:05:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:70:29: error: expected ‘;’ before ‘}’ token
   70 |   return list->current->data
      |                             ^
      |                             ;
   71 | }
      | ~                            
Compilation failed
36d2e83
Sun 21 Aug 2022 06:06:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ca5d322
Sun 21 Aug 2022 06:11:00 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
85c3add
Sun 21 Aug 2022 06:28:23 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:74:20: error: implicit declaration of function ‘Create_Node’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   74 |   Node *New_Node = Create_Node(data);
      |                    ^~~~~~~~~~~
      |                    createNode
list.c:74:20: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
list.c:74:9: error: unused variable ‘New_Node’ [-Werror=unused-variable]
   74 |   Node *New_Node = Create_Node(data);
      |         ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3ae4f7f
Sun 21 Aug 2022 06:29:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:74:9: error: unused variable ‘New_Node’ [-Werror=unused-variable]
   74 |   Node *New_Node = createNode(data);
      |         ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8077db5
Sun 21 Aug 2022 06:54:38 PM UTC: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
0116d71
Sun 21 Aug 2022 06:57:59 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
6b020fb
